changed the team colors

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -18,9 +18,9 @@ header {
 }
 
 .team1 {
-  background-color: gray;
+  background-color: rgb(187, 36, 36);
 }
 
 .team2 {
-  background-color: gray;
+  background-color: rgb(60, 8, 106);
 }
